# termilog

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: app_data.rs  log_line.rs  main.rs  parse_log.rs  raw_parse.rs  stateful_list.rs  ui.rs
