[package]
name = "termilog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
# notify = "6.1.1"
ratatui = "0.27.0"
# regex = "1.7.1"
self_cell = "1.0.4"
simple-logging = "2.0.2"
log = "0.4.22"
tui-textarea = "0.5.0"
clap = { version = "4.5.9", features = ["derive"] }

